--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,7 @@
     <!-- Google font -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet" />
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-
-    <script src="https://kit.fontawesome.com/21f727c91f.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/21f727c91f.js" crossorigin="anonymous"></script> -->
 </head>
 
 <body>
