--- a/src/index.html
+++ b/src/index.html
@@ -168,7 +168,7 @@
                                     </p>
 
                                     <div class="text-center mt-4">
-                                        <a href="#" class="btn btn-outline-info">View all</a>
+                                        <a href="#" class="btn btn-info">View all</a>
                                     </div>
                                 </div>
                             </div>
