Add sidebar sub menu

--- a/src/index.html
+++ b/src/index.html
@@ -45,9 +45,16 @@
                         </li>
 
                         <li class="sidebar_nav_item d-flex">
-                            <a href="#" class="d-flex align-items-center text-light">
+                            <a class="d-flex align-items-center text-light" data-toggle="collapse" href="#submenu1" aria-expanded="false" aria-controls="submenu1">
                                 <i class="fas fa-briefcase fa-lg mr-4"></i>
                                 <p class="m-0">Jobs</p>
+                            </a>
+                        </li>
+                        <!-- sidebar sub item -->
+                        <li class="sidebar_nav_item sidebar_nav_sub collapse multi-collapse" id="submenu1">
+                            <a class="d-flex align-items-center text-light active">
+                                <i class="fas fa-user-friends fa-lg mr-4"></i>
+                                <p class="m-0">Sub Menu</p>
                             </a>
                         </li>
 
